--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.7",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.15",
+    "clsx": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "moment": "^2.29.4",
