--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@prisma/client": "^5.3.1",
     "@tanstack/react-query": "^4.35.3",
     "@types/node": "20.6.1",
@@ -25,6 +26,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-tooltip": "^5.21.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "windstitch": "^0.3.0",
