--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "prisma": "^5.3.1",
+    "tailwind-scrollbar": "^3.0.5",
     "yup": "^1.2.0"
   }
 }
