--- a/package.json
+++ b/package.json
@@ -17,15 +17,20 @@
     "@types/react-dom": "18.2.7",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "iron-session": "^6.3.1",
     "moment": "^2.29.4",
     "next": "13.4.19",
     "nextjs-progressbar": "^0.0.16",
+    "nookies": "^2.5.2",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-tooltip": "^5.21.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
@@ -35,6 +40,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "@types/aos": "^3.0.4",
+    "@types/bcrypt": "^5.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "prisma": "^5.3.1",
