--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@types/react-dom": "18.2.7",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.15",
-    "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
+    "axios": "0.27.2",
     "clsx": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
