--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.5.2",
     "react-tooltip": "^5.21.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
