--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.6.1",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@uploadthing/react": "^5.6.1",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.15",
     "axios": "0.27.2",
@@ -35,6 +36,7 @@
     "react-tooltip": "^5.21.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "uploadthing": "^5.6.1",
     "windstitch": "^0.3.0",
     "zustand": "^4.4.1"
   },
