--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.2",
     "react-tooltip": "^5.21.4",
+    "sharp": "^0.32.6",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "uploadthing": "^5.6.1",
